test/integration/bad/lang/bad_bounds8.stan
data {
  vector<offset=0>
}